# VirtualLibrary

./: .gitignore  CMakeLists.txt  README.md
docs/: diagram.plantuml
libs/log.c/: CMakeLists.txt
src/: CMakeLists.txt  book.c  book_manager.c  listbook.c  main.c  main_window.c
src/includes/: book.h  book_manager.h  listbook.h  main_window.h
